update: title and favicon

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harry Design Studio Clone</title>
-    <meta name="description" content="Portfolio with pixel art animations inspired by Harry Design Studio" />
+    <title>A.S.S. Protocol</title>
+    <meta name="description" content="Automatic Stable System - Protect traders from creator dumps on Solana" />
     <meta name="theme-color" content="#000000" />
     
     <!-- Preconnect to Google Fonts -->
